# graphql_demo

./: Cargo.toml  fastly.toml
src/: graphql_schema.rs  main.rs
