[package]
name = "fastly-template-rust-default"
version = "0.1.0"
authors = []
edition = "2018"

[profile.release]
debug = true

[dependencies]
fastly = "^0.8.0"
log-fastly = "0.1.0"
log = "0.4.8"
juniper = { version = "0.14", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
